<resources>
    <string name="app_name">NoteHut</string>
    <string name="header_nothut">NoteHut</string>
    <string name="txt_search_your_notes">Search notes</string>
    <string name="search_icon">Search Icon</string>
    <string name="add_note_icon">Add Note Icon</string>
    <string name="add_image_icon">Add Image Icon</string>
    <string name="add_url_icon">Add URL Icon</string>
    <string name="back_button">Back Button</string>
    <string name="done_button">Done Button</string>
    <string name="subtitle">Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="default_color">Default Color</string>
    <string name="pick_color">Pick Color</string>
    <string name="image">Image</string>
    <string name="delete_url">Delete URL</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_image_icon">Delete Image Icon</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="task_list">Task List</string>
    <string name="notes">Notes</string>
    <string name="are_you_sure_you_want_to_exit_without_saving_note">Are you sure you want to exit without saving note?</string>
</resources>