<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.animsh.materialsearchbar.MaterialSearchBar
            android:id="@+id/searchBar"
            style="@style/MyCustomTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mt_backIconDrawable="@drawable/ic_arrow_back"
            app:mt_clearIconDrawable="@drawable/ic_close"
            app:mt_hint="search notes"
            app:mt_placeholder="NoteHut"
            app:mt_searchIconDrawable="@drawable/ic_search"
            app:mt_textCursorTint="@color/colorTextColor" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:lottie_rawRes="@raw/list_grid" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_action"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <View
        android:id="@+id/supporterView"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@drawable/shadow_inverted"
        app:layout_anchor="@+id/notes_recyclerview"
        app:layout_anchorGravity="top"
        app:layout_constraintTop_toTopOf="@+id/notes_recyclerview" />

    <View
        android:id="@+id/supporterView2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@drawable/shadow"
        app:layout_anchor="@+id/notes_recyclerview"
        app:layout_anchorGravity="bottom"
        app:layout_constraintBottom_toBottomOf="@+id/notes_recyclerview" />

    <LinearLayout
        android:id="@+id/layout_quick_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_add_image"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/add_image_icon"
            android:src="@drawable/ic_add_photo"
            app:tint="@color/colorIcons" />

        <ImageView
            android:id="@+id/image_add_url"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/add_url_icon"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_url"
            app:tint="@color/colorIcons" />

        <ImageView
            android:id="@+id/image_add_checklist"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/add_url_icon"
            android:padding="@dimen/_1sdp"
            android:src="@drawable/ic_checklist"
            app:tint="@color/colorIcons" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/image_add_note_main"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/add_note_icon"
        android:src="@drawable/ic_round_add"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/layout_quick_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_quick_action" />


</androidx.constraintlayout.widget.ConstraintLayout>